hphp/hack/test/typecheck/new_inference/typehole/t28704048.php.exp
ERROR: File "t28704048.php", line 14, characters 8-13:
Typing error (Typing[4110])
  File "t28704048.php", line 14, characters 8-9:
  Expected `arraykey` because only array keys can be used to index into a `Map`, `dict`, `darray`, `Set`, or `keyset`
  File "t28704048.php", line 12, characters 14-14:
  But got `B`
